objects/CMN_LogMessageFilter__mdt.object
<CustomObject>
    <description>Allow users to filter and replace content of log body using regular expressions</description>
    <fields>
        <fullName>CMN_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is log filter active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_RegexToFind__c</fullName>
        <description>Regex to search for (can also use plain text) - useful for masking data</description>
        <label>Regex to Find</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_RegexToReplaceWith__c</fullName>
        <description>Regex to replace with in the event you use capture groups in Regex To Find field</description>
        <label>Regex To Replace With</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Log Message Filter</label>
    <listViews>
        <fullName>CMN_AllLogMessageFilters</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>CMN_Active__c</columns>
        <columns>CMN_RegexToFind__c</columns>
        <columns>CMN_RegexToReplaceWith__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Log Message Filters</label>
    </listViews>
    <pluralLabel>Log Message Filters</pluralLabel>
</CustomObject>